--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
   "name": "Fuel Log Web App",
   "short_name": "Fuel Log",
   "description": "A web application to log fuel usage and generate reports.",
-  "start_url": "/Autokm.html",
+  "start_url": "/Autokm.html/",
   "display": "standalone",
   "background_color": "#E0F7FA",
   "theme_color": "#004D40",
-  "scope": "/",
+  "scope": "/Autukm/",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
