--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "background_color": "#E0F7FA",
   "theme_color": "#004D40",
-  "scope": "/Autukm/",
+  "scope": "/Autokm/",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
