--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Autokm",
   "short_name": "Autokm",
   "description": "A web application to log fuel usage and generate reports.",
-  "start_url": "/Autokm.html/",
+  "start_url": "/index.html/",
   "display": "standalone",
   "background_color": "#E0F7FA",
   "theme_color": "#004D40",
